# janslolcodekernel

./: README.md  pyproject.toml
example/: example.ipynb
janslolcodekernel/: kernel.json
src/janslolcodekernel/: __main__.py  install_kernelspec.py  kernel.py
